# painless-panes-model

./: .gitignore  LICENSE  README.md  pyproject.toml
01-data-generation/: 01_download.py  README.md
01-data-generation/labels/: 20230924_094547.txt  20230924_094623.txt  28w_34h.txt  28w_54h_x2_with_ar.txt  A_a_46.5x45.25.txt  B_b_46.5x45.25.txt  C_c_32x45.txt  C_d_32x45.txt  C_e_32x45.txt  D_e_31.75x45.txt  E_c_23x52.75_52.75x52.25_23x52.75.txt  E_d_23x52.75_52.75x52.25_23x52.75.txt  E_e_23x52.75_52.75x52.25_23x52.75.txt  F_c_36x53.txt  F_d_36x53.txt  G_g_24x53-55x52.63-24x53.txt  H_b_35x36.13.txt  H_d_35x36.13.txt  IMG_0150.txt  I_a_32x45.txt  K_a_32x45-32x45.txt  K_b_32x45-32x45.txt  K_c_32x45-32x45.txt  K_g_32x45-32x45.txt  K_i_32x45-32x45.txt
02-model-training/: 01_train.py  02_predict.py  02_restart.py  03_export.py  03_predict.py  04_export.py  README.md  annotated_data.yaml
02-model-training/custom-model_saved_model/: fingerprint.pb
02-model-training/custom-model_web_model/: metadata.yaml  model.json
02-model-training/runs/train/: args.yaml  events.out.tfevents.1696084270.sven.8418.0  events.out.tfevents.1696085559.sven.12968.0  results.csv
02-model-training/runs/train2/: args.yaml  events.out.tfevents.1696085480.sven.12872.0
02-model-training/runs/train3/: args.yaml  events.out.tfevents.1696099696.sven.36667.0
02-model-training/train/: labels.cache
02-model-training/train/labels/: 000001.txt  000002.txt  (+204 more)
02-model-training/val/: labels.cache
03-image-processing/: 01_measure-windows.py  02_measure-windows.py  02_test.py  README.md  classes.txt
(+22 files in other folders)
